CHANGES IN VERSION 1.99.1
-------------------------
 o annoucning pwiz in vignette and that it will become the default
   backend in Bioc 3.1 [2014-09-25 Thu]
 o adding a dummy close for pwiz backend to avoid breaking code 
   that properly closes the previous ramp backend [2014-09-21 Sun]

CHANGES IN VERSION 1.99.0
-------------------------
 o New pwiz backend and support for mzid, contributed by Qiang Kou as
   part of GSoC 2014.
 o Using BiocStyle for vignette [2014-08-26 Tue]

CHANGES IN VERSION 1.11.11
-------------------------
 o Remove superflouus library call in unitTests, should fix R CMD check on windows

CHANGES IN VERSION 1.11.10
-------------------------
 o Remove redundant columns when returning several spectra

CHANGES IN VERSION 1.11.9
-------------------------
 o Fix a bug in header() returning too few columns, introduced during 1.11.7

CHANGES IN VERSION 1.11.8
-------------------------
 o Fix a windows compile problem by early importing Rcpp.h

 CHANGES IN VERSION 1.11.7
-------------------------
 o include polarity information into header() output

CHANGES IN VERSION 1.11.6
-------------------------
 o removed one redundant parser which fixes inconsistencies 
   in the scan headers

CHANGES IN VERSION 1.11.5
-------------------------
 o restored the polarity extraction

CHANGES IN VERSION 1.11.4
-------------------------
 o restored the old ramp Interface

CHANGES IN VERSION 1.11.2
-------------------------
 o adding missed src files [2014-05-28 Tue]
 o merging master [2014-05-30 Fri]

CHANGES IN VERSION 1.11.1
-------------------------
 o update pwiz/boost to support Maverick [2014-05-26 Mon]

CHANGES IN VERSION 1.9.8
------------------------
 o Pointing to the relevant wiki page in the Rcpp compiler/linker
   warning [2014-04-03 Thu]

CHANGES IN VERSION 1.9.7
------------------------
 o modify to new biocViews to DESCRIPTION file (s.arora)

CHANGES IN VERSION 1.9.6
------------------------